@@ -651,6 +651,38 @@ class User extends Common_functions {
         }
     }
 
+    /**
+     * Migrate resolve_subnets from config.php to database
+     * for versions older than 1.31
+     *
+     * @method migrate_resolve_subnets
+     *
+     * @return void
+     */
+    public function migrate_resolve_subnets () {
+        // read config.php
+        include( dirname(__FILE__).'/../../config.php' );
+        // check for array and values
+        if(isset($config['resolve_subnets'])) {
+            if(is_array($config['resolve_subnets'])) {
+                if (sizeof($config['resolve_subnets'])>0) {
+                    foreach ($config['resolve_subnets'] as $subnetId) {
+                        $update = array (
+                                         "id"         => $subnetId,
+                                         "resolveDNS" => 1
+                                         );
+                        // update
+                        try {
+                            $this->Database->updateObject("subnets", $update);
+                        } catch (Exception $e) {}
+                    }
+                    // print that is can be deleted
+                    $this->Result->show ("warning", '$config[resolve_subnets] '._('was migrated to database. It can be deleted from config.php'), false);
+                }
+            }
+        }
+    }
+
 
 
 
